# neural-video-codec

./: .gitignore  HOW_IT_WORKS.txt  README.md  evaluate.py  pyproject.toml  requirements.txt  train.py  visualize.py
configs/: base.yaml
data/: prepare_dataset.py
losses/: __init__.py  rd_loss.py
models/: __init__.py  codec.py  decoder.py  encoder.py  entropy_model.py  motion.py
